don't use ReflectionUtil on start-up
GitOrigin-RevId: de7c035603263aa649bf30f2c5b28fbe3db6ea94